--- a/app/views/dashboards/_partials/area_per_service_leaderboard.html
+++ b/app/views/dashboards/_partials/area_per_service_leaderboard.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="table-responsive">
-                <table class="table table-bordered b-t">
+                <table class="table table-bordered b-t table-tabular">
                     <thead>
                         <tr>
                             <th>Service</th>
