--- a/app/views/dashboards/_partials/service_group_per_status_leaderboard.html
+++ b/app/views/dashboards/_partials/service_group_per_status_leaderboard.html
@@ -30,7 +30,7 @@
             <!-- end actions -->
             <!-- start table -->
             <div class="table-responsive">
-                <table class="table table-bordered b-t">
+                <table class="table table-bordered b-t table-tabular">
                     <thead>
                         <tr>
                             <th>Service Group</th>
