--- a/app/views/dashboards/_partials/area_per_status_leaderboard.html
+++ b/app/views/dashboards/_partials/area_per_status_leaderboard.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="table-responsive">
-                <table class="table table-bordered b-t">
+                <table class="table table-bordered b-t table-tabular">
                     <thead>
                         <tr>
                             <th>Area</th>
