re-format areas summary overview

--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -42,9 +42,13 @@
 <div class="app-body">
     <div class="app-body-inner">
 
-        <!-- start overview summary -->
-        <ng-include src="'views/dashboards/overviews/_partials/summary.html'" />
-        <!-- end overview summary -->
+        <!-- start overall summary -->
+        <ng-include src="'views/dashboards/overviews/_partials/overall_summary.html'"></ng-include>
+        <!-- end overall summary -->
+
+        <!-- start areas summary -->
+        <ng-include src="'views/dashboards/overviews/_partials/areas_summary.html'"></ng-include>
+        <!-- end areas summary -->
 
     </div>
 </div>
