improve service groups overview reports ui

--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -50,6 +50,11 @@
         <ng-include src="'views/dashboards/overviews/_partials/areas_summary.html'"></ng-include>
         <!-- end areas summary -->
 
+        <!-- start service groups summary -->
+        <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
+        <ng-include src="'views/dashboards/overviews/_partials/service_groups_summary.html'"></ng-include>
+        <!-- end service groups summary -->
+
     </div>
 </div>
 <!-- end overview body -->
