--- a/app/views/dashboards/overviews/_partials/service_groups_summary.html
+++ b/app/views/dashboards/overviews/_partials/service_groups_summary.html
@@ -1,21 +1,31 @@
+<!-- start service groups summary -->
 <div class="padding m-t-lg">
+
+    <!-- start report box -->
     <div class="box b-a p-l-0">
+
         <!-- start header -->
         <div class="box-header b-b" title="Areas Summary">
-            <h3>Areas Summary</h3>
+            <h3>Service Groups Summary</h3>
             <small>Sub title goes here with small font</small>
         </div>
         <!-- end header -->
+
         <!-- start toolbox -->
         <div class="box-tool">
 
             <!-- start time filters -->
             <ul class="nav">
+
+                <!-- start export -->
                 <li class="nav-item inline">
                     <a uib-dropdown-toggle class="btn btn-xs rounded white" aria-expanded="false">
-                      Export
-                    </a>
+                          Export
+                        </a>
                 </li>
+                <!-- end export -->
+
+                <!-- start date filters -->
                 <li uib-dropdown class="nav-item inline dropdown">
                     <a uib-dropdown-toggle class="btn btn-xs rounded white dropdown-toggle" aria-expanded="false">Today</a>
                     <div uib-dropdown-menu class="dropdown-menu dropdown-menu-scale pull-right">
@@ -27,40 +37,24 @@
                         <a class="dropdown-item">Today</a>
                     </div>
                 </li>
+                <!-- end date filters -->
+
             </ul>
             <!-- end time filters -->
 
         </div>
         <!-- end toolbox -->
+
+        <!-- start body -->
         <div>
             <div class="row-col">
-                <div class="col-sm-4 b-r light lt">
-                    <div class="p-a-md">
-                        <span class="pull-right text-success">40%</span>
-                        <small>Consulting</small>
-                        <div class="progress progress-xs m-t-sm white bg">
-                            <div class="progress-bar success" data-toggle="tooltip" data-original-title="40%" style="width: 40%"></div>
-                        </div>
-                        <span class="pull-right text-info">25%</span>
-                        <small>Online tutorials</small>
-                        <div class="progress progress-xs m-t-sm white bg">
-                            <div class="progress-bar info" data-toggle="tooltip" data-original-title="25%" style="width: 25%"></div>
-                        </div>
-                        <span class="pull-right text-danger">15%</span>
-                        <small>EDU management</small>
-                        <div class="progress progress-xs m-t-sm white bg">
-                            <div class="progress-bar danger" data-toggle="tooltip" data-original-title="15%" style="width: 15%"></div>
-                        </div>
-                        <p class="text-muted m-t-md text-sm">Morbi id neque quam. Dales nisi nec adipiscing elit. ADales nisi nec adipiscing elit. liquam sollicitudin venenatis</p>
-                    </div>
-                </div>
 
                 <!-- start tabular stats -->
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th title="Area">Area</th>
+                                <th title="Area">Service Group</th>
                                 <th title="Total Count of Service Requests">Total</th>
                                 <th title="Total Count of Pending Service Requests">Pending</th>
                                 <th title="Total Count of Resolved Service Requests">Resolved</th>
@@ -71,7 +65,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Kimara</td>
+                                <td>Commercial</td>
                                 <td>1495</td>
                                 <td>495</td>
                                 <td>200</td>
@@ -80,7 +74,7 @@
                                 <td>70</td>
                             </tr>
                             <tr>
-                                <td>Ilala</td>
+                                <td>Other</td>
                                 <td>1495</td>
                                 <td>495</td>
                                 <td>200</td>
@@ -93,7 +87,20 @@
                 </div>
                 <!-- end tabular stats -->
 
+                <!-- start visual stats -->
+                <div class="col-sm-5 b-l lt">
+                    <div class="p-a-md">
+                        <echart config="perPriorityConfig" options="perPriorityOptions"></echart>
+                    </div>
+                </div>
+                <!-- end visual starts -->
+
             </div>
         </div>
+        <!-- end body -->
+
     </div>
+    <!-- end report box -->
+
 </div>
+<!-- end service groups summary -->
