improve services overview ui

--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -55,6 +55,11 @@
         <ng-include src="'views/dashboards/overviews/_partials/service_groups_summary.html'"></ng-include>
         <!-- end service groups summary -->
 
+        <!-- start services summary -->
+        <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
+        <ng-include src="'views/dashboards/overviews/_partials/services_summary.html'"></ng-include>
+        <!-- end services summary -->
+
     </div>
 </div>
 <!-- end overview body -->
