--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -43,21 +43,21 @@
     <div class="app-body-inner">
 
         <!-- start overall summary -->
-        <ng-include src="'views/dashboards/overviews/_partials/overall_summary.html'"></ng-include>
+        <ng-include ng-if="overviews.overall" src="'views/dashboards/overviews/_partials/overall_summary.html'"></ng-include>
         <!-- end overall summary -->
 
-        <!-- start areas summary -->
-        <ng-include src="'views/dashboards/overviews/_partials/areas_summary.html'"></ng-include>
-        <!-- end areas summary -->
+        <!-- start jurisdictions summary -->
+        <ng-include ng-if="overviews.jurisdictions" src="'views/dashboards/overviews/_partials/jurisdictions_summary.html'"></ng-include>
+        <!-- end jurisdictions summary -->
 
         <!-- start service groups summary -->
         <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
-        <ng-include src="'views/dashboards/overviews/_partials/service_groups_summary.html'"></ng-include>
+        <ng-include ng-if="overviews.groups" src="'views/dashboards/overviews/_partials/service_groups_summary.html'"></ng-include>
         <!-- end service groups summary -->
 
         <!-- start services summary -->
         <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
-        <ng-include src="'views/dashboards/overviews/_partials/services_summary.html'"></ng-include>
+        <ng-include ng-if="overviews.services" src="'views/dashboards/overviews/_partials/services_summary.html'"></ng-include>
         <!-- end services summary -->
 
     </div>
