--- a/app/views/dashboards/overviews/_partials/service_groups_summary.html
+++ b/app/views/dashboards/overviews/_partials/service_groups_summary.html
@@ -5,23 +5,23 @@
     <div class="box b-a p-l-0">
 
         <!-- start header -->
-        <div class="box-header b-b" title="Areas Summary">
+        <div class="box-header b-b p-t-md" title="Areas Summary">
             <h3>Service Groups Summary</h3>
             <small>Sub title goes here with small font</small>
         </div>
         <!-- end header -->
 
         <!-- start toolbox -->
-        <div class="box-tool">
+        <div class="box-tool p-t-sm">
 
             <!-- start time filters -->
             <ul class="nav">
 
                 <!-- start export -->
                 <li class="nav-item inline">
-                    <a uib-dropdown-toggle class="btn btn-xs rounded white" aria-expanded="false">
-                          Export
-                        </a>
+                    <a title="Click To Export" class="btn btn-xs rounded white" aria-expanded="false" ng-csv="export('groups')" csv-header="exports.groups.headers" filename="service_groups_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv">
+                      Export
+                    </a>
                 </li>
                 <!-- end export -->
 
@@ -59,28 +59,47 @@
                                 <th title="Total Count of Pending Service Requests">Pending</th>
                                 <th title="Total Count of Resolved Service Requests">Resolved</th>
                                 <th title="Total Count of Service Requests Past SLA Resolve Time">Late</th>
-                                <th title="Average Time Taken to Attend a Customer(Call) Service Request">Average Attend Time (ATT)</th>
-                                <th title="Average Time Taken to a Resolve Service Request">Average Resolve Time (ART)</th>
+                                <th title="Average Time Taken to Attend a Customer(Call) Service Request">Average Attend Time</th>
+                                <th title="Average Time Taken to a Resolve Service Request">Average Resolve Time</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Commercial</td>
-                                <td>1495</td>
-                                <td>495</td>
-                                <td>200</td>
-                                <td>100</td>
-                                <td>70</td>
-                                <td>70</td>
-                            </tr>
-                            <tr>
-                                <td>Other</td>
-                                <td>1495</td>
-                                <td>495</td>
-                                <td>200</td>
-                                <td>100</td>
-                                <td>70</td>
-                                <td>70</td>
+                            <tr ng-repeat="group in overviews.groups">
+                                <td title="{{group.name}}">
+                                    {{group.name}}
+                                </td>
+                                <td title="{{group.count | number:0}}">
+                                    {{group.count | number:0}}
+                                </td>
+                                <td title=" {{group.pending | number:0}}">
+                                     {{group.pending | number:0}}
+                                </td>
+                                <td title=" {{group.resolved | number:0}}">
+                                     {{group.resolved | number:0}}
+                                </td>
+                                <td title=" {{group.late | number:0}}">
+                                     {{group.late | number:0}}
+                                </td>
+                                <td>
+                                    <span>
+                                      {{group.averageAttendTime.minutes}} 
+                                      <span class="text-muted text-xs">mins</span>
+                                    </span>
+                                    <span>
+                                        {{group.averageAttendTime.seconds}}
+                                        <span class="text-muted text-xs">secs</span>
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                      {{group.averageResolveTime.hours + (group.averageResolveTime.days * 24)}} 
+                                      <span class="text-muted text-xs">hrs</span>
+                                    </span>
+                                    <span>
+                                        {{group.averageAttendTime.minutes}}
+                                        <span class="text-muted text-xs">mins</span>
+                                    </span>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
