--- a/app/views/dashboards/overviews/_partials/service_groups_summary.html
+++ b/app/views/dashboards/overviews/_partials/service_groups_summary.html
@@ -54,13 +54,26 @@
                     <table class="table table-bordered">
                         <thead>
                             <tr>
-                                <th title="Area">Service Group</th>
-                                <th title="Total Count of Service Requests">Total</th>
-                                <th title="Total Count of Pending Service Requests">Pending</th>
-                                <th title="Total Count of Resolved Service Requests">Resolved</th>
-                                <th title="Total Count of Service Requests Past SLA Resolve Time">Late</th>
-                                <th title="Average Time Taken to Attend a Customer(Call) Service Request">Average Attend Time</th>
-                                <th title="Average Time Taken to a Resolve Service Request">Average Resolve Time</th>
+                                <th ng-click="prepareServiceGroupVisualization('count')" title="Area">
+                                    Service Group
+                                </th>
+                                <th ng-click="prepareServiceGroupVisualization('count')" title="Total Count of Service Requests">
+                                    Total
+                                </th>
+                                <th ng-click="prepareServiceGroupVisualization('pending')"  title="Total Count of Pending Service Requests">
+                                    Pending
+                                </th>
+                                <th ng-click="prepareServiceGroupVisualization('resolved')" title="Total Count of Resolved Service Requests">
+                                    Resolved
+                                </th>
+                                <th ng-click="prepareServiceGroupVisualization('late')" title="Total Count of Service Requests Past SLA Resolve Time">
+                                    Late
+                                </th>
+                                <th title="Average Time Taken to Attend a Customer(Call) Service Request">
+                                    Average Attend Time
+                                </th>
+                                <th title="Average Time Taken to a Resolve Service Request">   Average Resolve Time
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
@@ -109,7 +122,7 @@
                 <!-- start visual stats -->
                 <div class="col-sm-5 b-l lt">
                     <div class="p-a-md">
-                        <echart config="perPriorityConfig" options="perPriorityOptions"></echart>
+                        <echart config="perServiceGroupConfig" options="perServiceGroupOptions"></echart>
                     </div>
                 </div>
                 <!-- end visual starts -->
