improve overview reports user experience

--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -319,6 +319,7 @@ svg text {
     color: #FFFFFF;
 }
 
+
 /*custom checkbox overrides*/
 
 .checkbox-primary input[type="checkbox"]:checked+label::before,
@@ -340,6 +341,7 @@ svg text {
 
 
 /*tables*/
+
 .table-tabular tr:last-child td {
     font-weight: bold;
     background-color: rgba(120, 130, 140, .045);
@@ -355,6 +357,15 @@ svg text {
     background-color: rgba(120, 130, 140, .045);
 }
 
-.table-tabular td, th{
+.table-tabular td,
+th {
     font-size: .76rem;
+}
+
+.table-stats th {
+    cursor: pointer;
+}
+
+.table-stats tbody tr:hover {
+    background-color: rgba(0, 0, 0, 0.065);
 }
