--- a/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
+++ b/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
@@ -5,9 +5,9 @@
     <div class="box b-a p-l-0">
 
         <!-- start header -->
-        <div class="box-header b-b p-t-md" title="Areas Summary">
+        <div class="box-header b-b p-t-md p-b-md" title="Areas Summary">
             <h3>Areas Summary</h3>
-            <small>Sub title goes here with small font</small>
+            <!-- <small>Sub title goes here with small font</small> -->
         </div>
         <!-- end header -->
 
@@ -26,7 +26,7 @@
                 <!-- end export -->
 
                 <!-- start date filters -->
-                <li uib-dropdown class="nav-item inline dropdown">
+                <li uib-dropdown class="nav-item inline dropdown" style="display:none">
                     <a uib-dropdown-toggle class="btn btn-xs rounded white dropdown-toggle" aria-expanded="false">Today</a>
                     <div uib-dropdown-menu class="dropdown-menu dropdown-menu-scale pull-right">
                         <a class="dropdown-item" href="">Last 24 hours</a>
@@ -59,7 +59,7 @@
 
                 <!-- start tabular stats -->
                 <div class="col-sm-7">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-stats">
                         <thead>
                             <tr>
                                 <th ng-click="prepareJurisdictionVisualization('count')" title="Area">Area</th>
@@ -80,17 +80,17 @@
                                     {{jurisdiction.count | number:0}}
                                 </td>
                                 <td title=" {{jurisdiction.pending | number:0}}">
-                                     {{jurisdiction.pending | number:0}}
+                                    {{jurisdiction.pending | number:0}}
                                 </td>
                                 <td title=" {{jurisdiction.resolved | number:0}}">
-                                     {{jurisdiction.resolved | number:0}}
+                                    {{jurisdiction.resolved | number:0}}
                                 </td>
                                 <td title=" {{jurisdiction.late | number:0}}">
-                                     {{jurisdiction.late | number:0}}
+                                    {{jurisdiction.late | number:0}}
                                 </td>
                                 <td>
                                     <span>
-                                      {{jurisdiction.averageAttendTime.minutes}} 
+                                      {{jurisdiction.averageAttendTime.minutes}}
                                       <span class="text-muted text-xs">mins</span>
                                     </span>
                                     <span>
@@ -100,7 +100,7 @@
                                 </td>
                                 <td>
                                     <span>
-                                      {{jurisdiction.averageResolveTime.hours + (jurisdiction.averageResolveTime.days * 24)}} 
+                                      {{jurisdiction.averageResolveTime.hours + (jurisdiction.averageResolveTime.days * 24)}}
                                       <span class="text-muted text-xs">hrs</span>
                                     </span>
                                     <span>
