review overview report for deployment

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -50,7 +50,7 @@
               <span class="nav-text">Standings</span>
           </a>
                 </li>
-                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                <!-- <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.performances" title="Performances">
                     <span class="nav-icon">
                       <i class="ion-ios-speedometer"></i>
@@ -65,7 +65,7 @@
                   </span>
                   <span class="nav-text">Comparison</span>
                 </a>
-                </li>
+                </li> -->
                 <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.exports" title="Exports">
               <span class="nav-icon">
