--- a/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
+++ b/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
@@ -1,5 +1,5 @@
 <!-- start areas summary -->
-<div class="padding m-t-lg">
+<div class="padding m-t-md">
 
     <!-- start report box -->
     <div class="box b-a p-l-0">
