--- a/app/views/dashboards/overviews/_partials/service_groups_summary.html
+++ b/app/views/dashboards/overviews/_partials/service_groups_summary.html
@@ -1,5 +1,5 @@
 <!-- start service groups summary -->
-<div class="padding m-t-sm">
+<div class="padding m-t-md">
 
     <!-- start report box -->
     <div class="box b-a p-l-0">
