--- a/app/views/dashboards/overviews/_partials/services_summary.html
+++ b/app/views/dashboards/overviews/_partials/services_summary.html
@@ -1,5 +1,5 @@
 <!-- start services summary -->
-<div class="padding m-t-lg m-b-lg">
+<div class="padding m-t-md m-b-lg">
 
     <!-- start report box -->
     <div class="box b-a p-l-0">
