remove horizontal slider in performance reports

--- a/app/views/dashboards/performance/index.html
+++ b/app/views/dashboards/performance/index.html
@@ -17,7 +17,7 @@
         <!-- end profile summary and service request pipelines -->
 
         <!-- start overal and pipeline summary -->
-        <div class="row">
+        <div class="row no-gutter">
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <!-- start of area overall summary -->
                 <ng-include src="'views/dashboards/performance/_partials/overall_summary.html'"></ng-include>
